@@ -1,3 +1,10 @@
+2002-08-08  Joe English  <jenglish@users.sourceforge.net>
+	* unix/tkUnixWm.c:
+	* win/tkWinWm.c:
+	* tests/wm.test: Fix for Tk Bug #592201 "wm transient fails with two
+	  masters"; fixes panic after a transient window is reassigned to
+	  new master and either master is subsequently destroyed.
+
 2002-08-08  Don Porter <dgp@users.sf.net>
 
 	* tests/unixWm.test:  Corrected packaging of unixWm-50.3 so that
